# formattable

./: .gitignore  .travis.yml  LICENSE  README.md  changelog.md  formattable.cabal  stack.yaml
src/: Formattable.hs
src/Formattable/: NumFormat.hs  TimeDiff.hs
test/: NumFormatSpec.hs
