Name:                formattable
Version:             0.1
Synopsis:            A business-quality formatting package
Description:         This package defines data structures for describing
                     business-quality formatting for numbers, dates, etc.
License:             BSD3
License-file:        LICENSE
Author:              Ozgun Ataman, Doug Beardsley
Maintainer:          oz@soostone.com
Category:            Text
Build-type:          Simple
Cabal-version:       >= 1.10


Library
  Exposed-modules:     
    Formattable
    Formattable.NumFormat

  hs-source-dirs: src
  Build-depends:
      base                     >= 4     && < 5
    , bytestring               >= 0.9   && < 0.11
    , data-default-class       < 0.1
    , double-conversion        >= 0.2   && < 0.3
    , lens                     >= 4     && < 4.3
    , old-locale               >= 1.0   && < 1.1
    , text                     >= 0.11  && < 1.2
    , time                     >= 1.4   && < 1.5

  ghc-options: -Wall -fwarn-tabs
  default-language: Haskell2010


Test-Suite testsuite
  type: exitcode-stdio-1.0
  hs-Source-Dirs: src test
  ghc-Options: -Wall -fhpc -threaded -fbreak-on-exception
  main-Is: Spec.hs

  other-modules:
    Formattable
    Formattable.NumFormat

  build-depends:
      HUnit                    >= 1.2   && < 1.3
    , base                     >= 4     && < 5
    , bytestring
    , data-default-class
    , double-conversion
    , hspec                    >= 1.10  && < 1.11
    , lens
    , old-locale
    , text
    , time

